Refactor to use `asString()` over `asText()`, simplify `getFirst()` usage, and improve null checks across readers/writers.